--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,9 +26,9 @@ en:
     attr:
       best_foot: "Meilleur pied"
       best_side: "Meilleur coté"
-      right_foot_juggles: "Jgl pied droit"
-      left_foot_juggles: "Jgl pied gauche"
-      head_juggles: "Jgl tête"
+      right_foot_juggles: "Jongle pied droit"
+      left_foot_juggles: "Jongle pied gauche"
+      head_juggles: "Jongle tête"
       stamina: "Endurance"
       speed: "Vitesse"
       jump: "Détente"
